# api-watchdog

./: .gitignore  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  visual.html
.github/workflows/: python-tests.yml
api_watchdog/: cli.py  cli_api.py  entry.py  gui.py  gui_api.py  monitor_api_gui.py
api_watchdog/utils/: __init__.py  api_fetcher.py  config.py  gui_utils.py  logger.py
api_watchdog/utils/api_configuration/: __init__.py  stock_api.py  weather_api.py
tests/: conftest.py  test_api_fetcher.py  test_cli.py  test_config.py  test_entry.py  test_gui.py  test_logger.py
